# 1177-cli

./: README.md  pyproject.toml
.agent/: SKILL.md  skill.json
.agent/examples/: graph-workflow.md
.github/workflows/: package-skill.yml
1177_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli1177/: __init__.py  __main__.py  cli_common.py  config.py  errors.py  exit_codes.py  main.py  redact.py  runtime.py
cli1177/client/: auth.py  bankid.py  http.py  journal.py
cli1177/commands/: __init__.py  auth.py  journal.py
scripts/: generate-skill-manifest.py  package-skill.py
tests/: test_live_api_contract.py  test_output_contract.py
